--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,19 +10,19 @@
   },
   "dependencies": {
     "@repo/ui": "*",
-    "next": "^14.0.4",
+    "next": "^15.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
     "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "babel-plugin-react-native-web": "^0.19.10",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
-    "typescript": "5.5.4"
+    "eslint-config-next": "^15.1.3",
+    "typescript": "^5.7.2"
   }
 }
