--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -21,9 +21,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
+    "@eslint/js": "^9.17.0",
     "@expo/webpack-config": "^19.0.0",
     "@types/react": "^18.2.46",
     "@types/react-native": "^0.73.0",
-    "typescript": "^5.7.2"
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.2"
   }
 }
