--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,13 +16,17 @@
     "react-native-web": "^0.19.13"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@repo/typescript-config": "*",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "babel-plugin-react-native-web": "^0.19.10",
-    "eslint": "^8.56.0",
+    "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
-    "typescript": "^5.7.2"
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.2"
   }
 }
