--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,11 +9,16 @@
     "clean": "rm -rf dist"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@repo/typescript-config": "*",
     "@types/react": "^18.2.46",
     "@types/react-native": "^0.73.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
     "tsup": "^8.0.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.2"
   },
   "dependencies": {
     "react": "^18.2.0",
