--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -29,6 +29,9 @@
     "eslint-plugin-react": "^7.37.3",
     "globals": "^15.14.0",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.2"
+    "typescript-eslint": "^8.18.2",
+    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "eslint-plugin-react-native": "^4.1.0"
   }
 }
