--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@repo/ui": "*",
     "next": "^15.1.3",
     "react": "^18.2.0",
@@ -21,11 +24,14 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.20",
     "babel-plugin-react-native-web": "^0.19.10",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
     "eslint-plugin-react": "^7.37.3",
     "globals": "^15.14.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2"
   }
