--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -3,6 +3,11 @@
   "compilerOptions": {
     "plugins": [{ "name": "next" }]
   },
+  "baseUrl": ".",
+  "paths": {
+    "@components/*": ["app/components/*"],
+    "@lib/*": ["lib/*"]
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
