--- a/services/backend/tsconfig.json
+++ b/services/backend/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "@repo/typescript-config/react-native-library",
 	"compilerOptions": {
+		"strict": true,
 		"outDir": "./dist"
 	},
   "exclude": ["dist", "build", "node_modules"]
