--- a/services/backend/.env.example
+++ b/services/backend/.env.example
@@ -3,4 +3,4 @@ AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
 AWS_REGION=AWS_REGION
 DYNAMODB_LOCAL_ENDPOINT=http://localhost:8000
 PORT=3000
-NODE_ENV=development
+NODE_ENV=development / production
