--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -12,8 +12,6 @@
     "@aws-sdk/client-dynamodb": "^3.380.0",
     "@aws-sdk/lib-dynamodb": "^3.724.0",
     "@trpc/server": "^10.45.2",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "dynamodb-toolbox": "^0.3.3",
@@ -26,6 +24,8 @@
     "@types/bcrypt": "^5.0.2",
     "eslint": "^9.17.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.1"
   }
 }
