--- a/services/backend/.env.example
+++ b/services/backend/.env.example
@@ -1,3 +1,6 @@
-MONGODB_URI=mongodb+srv://DATABASE_USER:DATABASE_PASSWORD@DATABASE_URL/DATABASE_NAME
-PORT=PORT_NUMBER
+AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
+AWS_REGION=AWS_REGION
+DYNAMODB_LOCAL_ENDPOINT=http://localhost:8000
+PORT=3000
 NODE_ENV=development / production
