--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -5,26 +5,26 @@
   "types": "index.tsx",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --watch './**/*.ts' --exec tsx index.ts",
+    "dev": "nodemon --watch './**/*.ts' --exec yarn tsx index.ts",
     "build": "tsc -p ."
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.380.0",
+    "@aws-sdk/lib-dynamodb": "^3.724.0",
     "@trpc/server": "^10.45.2",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
+    "dynamodb-toolbox": "^0.3.3",
+    "dynamoose": "^4.0.3",
     "express": "^4.21.1",
-    "mongoose": "^8.8.3",
     "tsx": "^4.19.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
     "@types/bcrypt": "^5.0.2",
     "eslint": "^9.17.0",
-    "globals": "^15.14.0",
-    "tsconfig": "*",
-    "typescript-eslint": "^8.18.2"
+    "typescript": "^5.7.2",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.1"
   }
 }
