--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -22,9 +22,10 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.1",
     "eslint": "^9.17.0",
     "typescript": "^5.7.2",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.1"
+    "nodemon": "^3.1.9"
   }
 }
