--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@repo/ui": "*",
-    "next": "^15.1.3",
+    "@vercel/analytics": "^1.5.0",
+    "next": "^15.2.2",
     "next-intl": "^3.26.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
